# FinalThesis

./: .gitmodules  CMakeLists.txt  README.md  run.sh
external_tools/minimap2/MacOS/: minimap2
src/: Config.h.in  FASTAQObject.cpp  PAFObject.cpp  main.cpp  repeatsParser.cpp  repeats_parser.cpp  repeats_parser.h
